# rs-gluons

./: .gitignore  Cargo.toml  README.md
benches/: sort.rs
hello-rs-nostd/: Cargo.toml
hello-rs-nostd-win/: Cargo.toml  make.sh
hello-rs-nostd-win/src/: main.rs
hello-rs-nostd/src/: main.rs
hello-win-nostd/: Cargo.toml
src/: lib.rs  search.rs  sort.rs
templates/hello-win-nostd-gui/: Cargo.toml  make.sh
templates/hello-win-nostd/src/: main.rs
